--- a/package.json
+++ b/package.json
@@ -93,6 +93,9 @@
     "@types/sortablejs": "^1.10.7",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "@vitejs/plugin-legacy": "^1.6.2",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vitejs/plugin-vue-jsx": "^1.2.0",
     "@vue/compiler-sfc": "3.2.21",
     "@vue/test-utils": "^2.0.0-rc.16",
     "autoprefixer": "^10.4.0",
@@ -128,6 +131,18 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
+    "vite": "^2.6.13",
+    "vite-plugin-compression": "^0.3.5",
+    "vite-plugin-html": "^2.1.1",
+    "vite-plugin-imagemin": "^0.4.6",
+    "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-purge-icons": "^0.7.0",
+    "vite-plugin-pwa": "^0.11.3",
+    "vite-plugin-style-import": "^1.3.0",
+    "vite-plugin-svg-icons": "^1.0.5",
+    "vite-plugin-theme": "^0.8.1",
+    "vite-plugin-vue-setup-extend": "^0.1.0",
+    "vite-plugin-windicss": "^1.4.12",
     "vue-demi": "^0.14.10",
     "vue-eslint-parser": "^8.0.1",
     "vue-tsc": "^0.28.10"
